{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 113,
  "lineage": "a0cfd1e3-2d6d-0663-b883-3b7f7da44c2f",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391112142601:internet-gateway/igw-093003395c9fa76a6",
            "id": "igw-093003395c9fa76a6",
            "owner_id": "391112142601",
            "tags": {
              "Name": "igw",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "igw",
              "Owner": "dheerendra"
            },
            "vpc_id": "vpc-035a9d479e42ca204"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:391112142601:instance/i-06497a237ec1321fd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06497a237ec1321fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "opensearch",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f1307003422165d0",
            "private_dns": "ip-10-0-0-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.156",
            "public_ip": "44.200.237.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09292f4842760d9bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef089adcd82adbd4",
            "tags": {
              "Name": "master",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "master",
              "Owner": "dheerendra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af99e3c9c96fe8d9"
            ]
          },
          "dependencies": [
            "module.access_key.aws_key_pair.keypair",
            "module.access_key.tls_private_key.rsa",
            "module.pb_sg.aws_security_group.public_security_group",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0148329cbc317b3bd",
            "domain": "vpc",
            "id": "eipalloc-0148329cbc317b3bd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-88-246-237.compute-1.amazonaws.com",
            "public_ip": "54.88.246.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0148329cbc317b3bd",
            "connectivity_type": "public",
            "id": "nat-06c079003ddfc2c2e",
            "network_interface_id": "eni-0681461db89e5a783",
            "private_ip": "10.0.0.112",
            "public_ip": "54.88.246.237",
            "subnet_id": "subnet-0ef089adcd82adbd4",
            "tags": {
              "Name": "nat",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "nat",
              "Owner": "dheerendra"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.node1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:391112142601:instance/i-007b0030beed6ce2a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-007b0030beed6ce2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "opensearch",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-067233362101b6c62",
            "private_dns": "ip-10-0-48-173.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.48.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065a526d28359c155",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02955e835666d0cdc",
            "tags": {
              "Name": "db_Node1",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "db_Node1",
              "Owner": "dheerendra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a837fbbbf7891961"
            ]
          },
          "dependencies": [
            "module.access_key.aws_key_pair.keypair",
            "module.access_key.tls_private_key.rsa",
            "module.pvt_sg.aws_security_group.private_security_group",
            "module.pvt_subnet1.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.node2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:391112142601:instance/i-0774bca5b0d5ba342",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0774bca5b0d5ba342",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "opensearch",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a3bf7bda26203722",
            "private_dns": "ip-10-0-128-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.128.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037522e37fbe07b49",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ca6bc47a3362a902",
            "tags": {
              "Name": "db_Node2",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "db_Node2",
              "Owner": "dheerendra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a837fbbbf7891961"
            ]
          },
          "dependencies": [
            "module.access_key.aws_key_pair.keypair",
            "module.access_key.tls_private_key.rsa",
            "module.pvt_sg.aws_security_group.private_security_group",
            "module.pvt_subnet2.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391112142601:security-group/sg-0af99e3c9c96fe8d9",
            "description": "security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af99e3c9c96fe8d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Traffic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port for Performance Analyzer ",
                "from_port": 9600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9600
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port for os-crossCluster-search ",
                "from_port": 9250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port for os-dashboard",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port for os-nodeCommunication ",
                "from_port": 9300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port for os-rest-api",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "391112142601",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "public-sg",
              "Owner": "dheerendra"
            },
            "timeouts": null,
            "vpc_id": "vpc-035a9d479e42ca204"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_rtb",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391112142601:route-table/rtb-08d58a83b5b34e31a",
            "id": "rtb-08d58a83b5b34e31a",
            "owner_id": "391112142601",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-093003395c9fa76a6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_rtb",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "pub_rtb",
              "Owner": "dheerendra"
            },
            "timeouts": null,
            "vpc_id": "vpc-035a9d479e42ca204"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02844c745aaaad3ed",
            "route_table_id": "rtb-08d58a83b5b34e31a",
            "subnet_id": "subnet-0ef089adcd82adbd4"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.public_rtb.aws_route_table.public_routeTable",
            "module.public_subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391112142601:subnet/subnet-0ef089adcd82adbd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef089adcd82adbd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "391112142601",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb_subnet",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "pb_subnet",
              "Owner": "dheerendra"
            },
            "vpc_id": "vpc-035a9d479e42ca204"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_rtb",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391112142601:route-table/rtb-0388305c53a1436c3",
            "id": "rtb-0388305c53a1436c3",
            "owner_id": "391112142601",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-093003395c9fa76a6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pvt_rtb",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "pvt_rtb",
              "Owner": "dheerendra"
            },
            "timeouts": null,
            "vpc_id": "vpc-035a9d479e42ca204"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391112142601:security-group/sg-0a837fbbbf7891961",
            "description": "security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a837fbbbf7891961",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Traffic from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Traffic from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "port for Performance Analyzer ",
                "from_port": 9600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9600
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "port for os-crossCluster-search ",
                "from_port": 9250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9250
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "port for os-dashboard ",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "port for os-nodeCommunication ",
                "from_port": 9300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "port for os-rest-api ",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              }
            ],
            "name": "pvt-sg",
            "name_prefix": "",
            "owner_id": "391112142601",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "private-sg",
              "Owner": "dheerendra"
            },
            "timeouts": null,
            "vpc_id": "vpc-035a9d479e42ca204"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_subnet1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075b22fc95309002a",
            "route_table_id": "rtb-0388305c53a1436c3",
            "subnet_id": "subnet-02955e835666d0cdc"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.pvt_rtb.aws_route_table.private_routeTable",
            "module.pvt_subnet1.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391112142601:subnet/subnet-02955e835666d0cdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02955e835666d0cdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391112142601",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt_subnet1",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "pvt_subnet1",
              "Owner": "dheerendra"
            },
            "vpc_id": "vpc-035a9d479e42ca204"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_subnet2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7fd4c728284970c",
            "route_table_id": "rtb-0388305c53a1436c3",
            "subnet_id": "subnet-0ca6bc47a3362a902"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.pvt_rtb.aws_route_table.private_routeTable",
            "module.pvt_subnet2.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pvt_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391112142601:subnet/subnet-0ca6bc47a3362a902",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca6bc47a3362a902",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391112142601",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt_subnet2",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "pvt_subnet2",
              "Owner": "dheerendra"
            },
            "vpc_id": "vpc-035a9d479e42ca204"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391112142601:vpc/vpc-035a9d479e42ca204",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0baf99a1d1c3c125a",
            "default_route_table_id": "rtb-061f9e000701690f3",
            "default_security_group_id": "sg-0da869411f7668d46",
            "dhcp_options_id": "dopt-0f90da6366b437ecf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035a9d479e42ca204",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-061f9e000701690f3",
            "owner_id": "391112142601",
            "tags": {
              "Name": "my-vpc",
              "Owner": "dheerendra"
            },
            "tags_all": {
              "Name": "my-vpc",
              "Owner": "dheerendra"
            }
          }
        }
      ]
    }
  ]
}